Saindo do perfeito para testes de interface

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     .small-btn {
       padding: 8px 12px;
       font-size: 14px;
-      display: inline-block;
-      margin: 0 8px;
+      width: 100px;
     }
     /* Botões de assunto ocupam toda a largura */
     .subject-btn {
