Atualizando Ordenação de Disciplinas Independente do Banco de Dados

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     // Disciplinas
     const lines = document.createElement("div");
     lines.className = "metacog-lines";
-    Object.keys(questoesData).forEach((disc) => {
+    ['Biologia', 'Química', 'Física', 'Matemática'].forEach((disc) => {
       const line = document.createElement("div");
       line.className = "disc-line";
 
