--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ function updateStar(el, st) {
   el.className = "star state-" + st;
 
   // Define o nome da imagem de acordo com o estado
-  const starNames = ["black", "red", "orange", "green", "blue"];
+  const starNames = ["Black", "Red", "Orange", "Green", "Blue"];
   const imgName = starNames[st] + ".png";
 
   // Se já existir imagem, atualiza src. Se não, cria
