--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ height: 46px;
 .intro-block {
   display: flex;
   align-items: flex-start;
-  margin-bottom: 45px;
+  margin-bottom: 30px; /* distância das disciplinas abaixo da intro */
   max-width: 1000px;
   padding-top: 8px;
   padding-left: 0px;
@@ -180,6 +180,7 @@ height: 46px;
   width: 280px;
   border-radius: 8px;
   margin-right: 24px;
+  margin-left: 8px;  
 }
 .intro-text p {
   padding-top: 14px;
@@ -188,7 +189,18 @@ height: 46px;
   color: var(--c-text-muted);
   font-size: 15px;
 }
-
+.intro-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#xp-hoje {
+  margin-top: 4px;       /* distância abaixo da imagem */
+  margin-left: 8px;  
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--c-neutral);
+}
 /* =====================================================================================
    METACOGNIÇÃO – LINHAS DE DISCIPLINAS
    =====================================================================================*/
@@ -623,22 +635,41 @@ function updateStar(el, state) {
   img.src = `Stars/${PNG}`;
 }
 
+ /* -------- contador de feitas hoje -------- */
+function getTodaySolvedCount() {
+  const today = new Date().toISOString().split("T")[0];
+  let count = 0;
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    if (key.startsWith(`log_${today}_`)) count++;
+  }
+  return count;
+}
+
 /* ---------------- MENU PRINCIPAL ---------------- */
 function showMenu() {
   currentDisc = currentSub = null;
   updateHeader(false); clear();
 
   /* -------- Introdução -------- */
-  app.insertAdjacentHTML("beforeend", `
-    <div class="intro-block">
-      <img src="arcano_newtonius.png" alt="Arcano Newtonius" class="intro-img">
-      <div class="intro-text">
-        <p>Seja bem-vindo(a), jovem aprendiz do conhecimento!</p><br/>
-        <p>Eu sou <strong>Arcano Newtonius</strong>, o Mago das Ciências da Natureza e da Matemática!<br/>
-        Guardião dos segredos do universo, e teu guia nesta jornada rumo à aprovação em Medicina no ENEM.</p><br/>
-        <p>Cumpre tuas missões, conquista tuas estrelas e avança de nível até alcançar o topo!</p>
+app.insertAdjacentHTML("beforeend", `
+  <div class="intro-block">
+    <div class="intro-left">
+      <img src="arcano_newtonius.png"
+           alt="Arcano Newtonius"
+           class="intro-img">
+      <div id="xp-hoje">
+        XP Hoje: ${getTodaySolvedCount()}
       </div>
-    </div>`);
+    </div>
+    <div class="intro-text">
+      <p>Seja bem-vindo(a), jovem aprendiz do conhecimento!</p><br/>
+      <p>Eu sou <strong>Arcano Newtonius</strong>, o Mago das Ciências da Natureza e da Matemática!<br/>
+      Guardião dos segredos do universo, e teu guia nesta jornada rumo à aprovação em Medicina no ENEM.</p><br/>
+      <p>Cumpre tuas missões, conquista tuas estrelas e avança de nível até alcançar o topo!</p>
+    </div>
+  </div>`);
+
 
   /* -------- Lista de disciplinas -------- */
   const lines = app.appendChild(Object.assign(
@@ -805,8 +836,19 @@ function showQuestions(disc, sub) {
       box.style.color= st===1 ? "#32cd32" : st===2 ? "#ff0000" : "#f0f0f0";
     };
     paint();
-    box.onclick = () => { st=(st+1)%3; localStorage.setItem(key, st); paint(); refreshStats(); };
+    box.onclick = () => {
+  st = (st + 1) % 3;
+  localStorage.setItem(key, st);
 
+  if (st === 1 || st === 2) {
+    const today = new Date().toISOString().split("T")[0]; // formato: "2025-05-21"
+    const logKey = `log_${today}_${disc}_${sub}_${idx}`;
+    localStorage.setItem(logKey, "1"); // marca que a questão foi feita hoje
+  }
+
+  paint();
+  refreshStats();
+};
     /* Comentário livre */
     const cKey = `comment_${disc}_${sub}_${idx}`;
     row.appendChild(Object.assign(
