--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ height: 46px;
   display: flex;
   align-items: flex-start;
   margin-bottom: 30px; /* distância das disciplinas abaixo da intro */
-  max-width: 1000px;
+  max-width: 1100px;
   padding-top: 8px;
   padding-left: 0px;
 }
@@ -646,6 +646,24 @@ function getTodaySolvedCount() {
   return count;
 }
 
+/** Retorna o total de questões respondidas (logs) em todos os dias */
+function getTotalXPCount() {
+  let count = 0;
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    if (key.startsWith("log_")) count++;
+  }
+  return count;
+}
+
+/** Retorna o total de questões disponíveis no banco */
+function getTotalQuestionsCount() {
+  // percorre questoesData somando todos os comprimentos dos arrays
+  return Object.values(questoesData)
+    .flatMap(subs => Object.values(subs))
+    .reduce((sum, arr) => sum + arr.length, 0);
+}
+
 /* ---------------- MENU PRINCIPAL ---------------- */
 function showMenu() {
   currentDisc = currentSub = null;
@@ -659,7 +677,9 @@ app.insertAdjacentHTML("beforeend", `
            alt="Arcano Newtonius"
            class="intro-img">
       <div id="xp-hoje">
-        XP Hoje: ${getTodaySolvedCount()}
+     🔮Hoje: +${getTodaySolvedCount()}XP |
+        Total: ${getTotalXPCount()}XP |
+        ${Math.round( getTotalXPCount() / getTotalQuestionsCount() * 100 )}%
       </div>
     </div>
     <div class="intro-text">
@@ -836,14 +856,19 @@ function showQuestions(disc, sub) {
       box.style.color= st===1 ? "#32cd32" : st===2 ? "#ff0000" : "#f0f0f0";
     };
     paint();
-    box.onclick = () => {
+box.onclick = () => {
   st = (st + 1) % 3;
   localStorage.setItem(key, st);
 
+  const today  = new Date().toISOString().split("T")[0];
+  const logKey = `log_${today}_${disc}_${sub}_${idx}`;
+
   if (st === 1 || st === 2) {
-    const today = new Date().toISOString().split("T")[0]; // formato: "2025-05-21"
-    const logKey = `log_${today}_${disc}_${sub}_${idx}`;
-    localStorage.setItem(logKey, "1"); // marca que a questão foi feita hoje
+    // marcou ✓ ou ✗ → garante o log
+    localStorage.setItem(logKey, "1");
+  } else {
+    // voltou pra “não marcado” → remove o log
+    localStorage.removeItem(logKey);
   }
 
   paint();
